@@ -1,3 +1,10 @@
+2002-09-03  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclVar.c (Tcl_UpVar2): code cleanup to not use goto
+
+	* unix/configure: remove -pthread from LIBS on FreeBSD in thread
+	* unix/tcl.m4:    enabled build. [Bug #602849]
+
 2002-09-03  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclInterp.c (AliasCreate): a Tcl_Obj was leaked on error
